Update work links

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         </section>
         <section>
           <h3>執筆記事</h3>
+          <p>（東洋経済オンラインでの執筆記事は<a href="https://toyokeizai.net/list/author/%E8%8D%BB%E5%8E%9F+%E5%92%8C%E6%A8%B9" target="_blank">東洋経済オンラインの著者ページ</a>を参照）</p>
           <article>
             <span>2020.08</span>　週刊東洋経済 2020年8月8日号　<a target="_blank" href="https://premium.toyokeizai.net/articles/-/24295">3つのチェックポイントで読み解く 怪しいグラフの見抜き方</a>
           </article>
@@ -109,189 +110,156 @@
       <h5>制作した報道コンテンツや大学院の授業課題など</h5>
       <div id="works-block">
         <section>
-          <a href="./works/covid19/description.html">
-            <div data-src="./assets/img/eyecatch_covid19.png" style="background-image:url(./assets/img/eyecatch_covid19.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_covid19.png)" class="image"></div>
           <div class="info">
             <h3>新型コロナウイルス 国内感染の状況</h3>
+            <p>リンク：<a href="https://toyokeizai.net/sp/visual/tko/covid19/">東洋経済オンライン</a></p>
             <div class="date">2020.02</div>
           </div>
         </section>
         <section>
-          <a href="./works/precipitation/description.html">
-            <div data-src="./assets/img/eyecatch_precipitation.png" style="background-image:url(./assets/img/eyecatch_precipitation.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_precipitation.png)" class="image"></div>
           <div class="info">
             <h3>グラフィックで振り返る2019年の豪雨・台風災害</h3>
+            <p>リンク：<a href="https://toyokeizai.net/sp/visual/tko/precipitation/">東洋経済オンライン</a></p>
             <div class="date">2019.12</div>
           </div>
         </section>
         <section>
-          <a href="./works/overpitching/description.html">
-            <div data-src="./assets/img/eyecatch_overpitching.png" style="background-image:url(./assets/img/eyecatch_overpitching.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_overpitching.png)" class="image"></div>
           <div class="info">
             <h3>甲子園投手たちはどれだけ「過剰」な投球をしているか</h3>
+            <p>リンク：<a href="https://toyokeizai.net/sp/visual/tko/overpitching/">東洋経済オンライン</a></p>
             <div class="date">2019.08</div>
           </div>
         </section>
         <section>
-          <a href="./works/electoralfund/description.html">
-            <div data-src="./assets/img/eyecatch_electoralfund.png" style="background-image:url(./assets/img/eyecatch_electoralfund.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_electoralfund.png)" class="image"></div>
           <div class="info">
             <h3>選挙運動費用「余剰金」詳細データ</h3>
+            <p>リンク：<a href="https://toyokeizai.net/sp/visual/tko/electoralfund/">東洋経済オンライン</a></p>
             <div class="date">2019.07</div>
           </div>
         </section>
         <section>
-          <a href="./works/passport/description.html">
-            <div data-src="./assets/img/eyecatch_passport.png" style="background-image:url(./assets/img/eyecatch_passport.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_passport.png)" class="image"></div>
           <div class="info">
             <h3>ビジュアルで見るパスポートのチカラ</h3>
+            <p>リンク：<a href="https://toyokeizai.net/sp/brandstudio-lab/passport/">東洋経済 Brand Studio</a></p>
             <div class="date">2019.05</div>
           </div>
         </section>
         <section>
-          <a href="./works/landprices2/description.html">
-            <div data-src="./assets/img/eyecatch_landprices2.png" style="background-image:url(./assets/img/eyecatch_landprices2.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_landprices2.png)" class="image"></div>
           <div class="info">
             <h3>全国「公示地価」最新価格・過去比較3Dマップ</h3>
+            <p>リンク：<a href="https://toyokeizai.net/sp/visual/tko/landprices3/">東洋経済オンライン</a></p>
             <div class="date">2019.03</div>
           </div>
         </section>
         <section>
-          <a href="./works/librarians/description.html">
-            <div data-src="./assets/img/eyecatch_librarians.png" style="background-image:url(./assets/img/eyecatch_librarians.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_librarians.png)" class="image"></div>
           <div class="info">
             <h3>都道府県別「図書館司書」の非正規雇用</h3>
+            <p>リンク：<a href="https://toyokeizai.net/sp/visual/tko/librarians/">東洋経済オンライン</a></p>
             <div class="date">2019.01</div>
           </div>
         </section>
         <section>
-          <a href="./works/landprices/description.html">
-            <div data-src="./assets/img/eyecatch_landprices.png" style="background-image:url(./assets/img/eyecatch_landprices.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_landprices.png)" class="image"></div>
           <div class="info">
             <h3>全国「基準地価」市区町村平均値マップ</h3>
+            <p>リンク：<a href="https://toyokeizai.net/sp/visual/tko/landprices2/">東洋経済オンライン</a></p>
             <div class="date">2018.11</div>
           </div>
         </section>
         <section>
-          <a href="./works/temperature/description.html">
-            <div data-src="./assets/img/eyecatch_temperature.png" style="background-image:url(./assets/img/eyecatch_temperature.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_temperature.png)" class="image"></div>
           <div class="info">
             <h3>東京の夏は徐々に暑く・長くなっている</h3>
+            <p>リンク：<a href="https://toyokeizai.net/sp/visual/tko/temperature/">東洋経済オンライン</a></p>
             <div class="date">2018.07</div>
           </div>
         </section>
         <section>
-          <a href="./works/viz4socialgood/description.html">
-            <div data-src="./assets/img/eyecatch_viz4socialgood.png" style="background-image:url(./assets/img/eyecatch_viz4socialgood.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_viz4socialgood.png)" class="image"></div>
           <div class="info">
             <h3>人身売買データの可視化</h3>
             <div class="date">2018.07</div>
           </div>
         </section>
         <section>
-          <a href="./works/teachers/description.html">
-            <div data-src="./assets/img/eyecatch_teachers.png" style="background-image:url(./assets/img/eyecatch_teachers.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_teachers.png)" class="image"></div>
           <div class="info">
             <h3>都道府県別「非正規教員」比率</h3>
             <div class="date">2018.03</div>
           </div>
         </section>
         <section>
-          <a href="./works/jpycoins/description.html">
-            <div data-src="./assets/img/eyecatch_jpycoins.png" style="background-image:url(./assets/img/eyecatch_jpycoins.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_jpycoins.png)" class="image"></div>
           <div class="info">
             <h3>日本の「硬貨」をビジュアライズ</h3>
             <div class="date">2018.02</div>
           </div>
         </section>
         <section>
-          <a href="./works/dissolution/description.html">
-            <div data-src="./assets/img/eyecatch_dissolution.png" style="background-image:url(./assets/img/eyecatch_dissolution.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_dissolution.png)" class="image"></div>
           <div class="info">
             <h3>G7各国における議会（下院）の総選挙と解散</h3>
             <div class="date">2017.11</div>
           </div>
         </section>
         <section>
-          <a href="./works/trade/description.html">
-            <div data-src="./assets/img/eyecatch_trade.png" style="background-image:url(./assets/img/eyecatch_trade.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_trade.png)" class="image"></div>
           <div class="info">
             <h3>日本の貿易品目・貿易相手</h3>
             <div class="date">2017.08</div>
           </div>
         </section>
         <section>
-          <a href="./works/pyramids/description.html">
-            <div data-src="./assets/img/eyecatch_pyramids.png" style="background-image:url(./assets/img/eyecatch_pyramids.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_pyramids.png)" class="image"></div>
           <div class="info">
             <h3>世界各国の人口ピラミッド</h3>
             <div class="date">2017.07</div>
           </div>
         </section>
         <section>
-          <a href="./works/nobelprize/description.html">
-            <div data-src="./assets/img/eyecatch_nobelprize.png" style="background-image:url(./assets/img/eyecatch_nobelprize.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_nobelprize.png)" class="image"></div>
           <div class="info">
             <h3>ノーベル賞の「高齢化」インタラクティブグラフ</h3>
             <div class="date">2017.05</div>
           </div>
         </section>
         <section>
-          <a href="./works/musicxml/description.html">
-            <div data-src="./assets/img/eyecatch_musicxml.png" style="background-image:url(./assets/img/eyecatch_musicxml.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_musicxml.png)" class="image"></div>
           <div class="info">
             <h3>楽譜のビジュアライゼーション</h3>
             <div class="date">2017.04</div>
           </div>
         </section>
         <section>
-          <a href="./works/collisions/description.html">
-            <div data-src="./assets/img/eyecatch_collisions.png" style="background-image:url(./assets/img/eyecatch_collisions.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_collisions.png)" class="image"></div>
           <div class="info">
             <h3>エディンバラ市の交通事故マップ</h3>
             <div class="date">2017.04</div>
           </div>
         </section>
         <section>
-          <a href="./works/population/description.html">
-            <div data-src="./assets/img/eyecatch_population.png" style="background-image:url(./assets/img/eyecatch_population.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_population.png)" class="image"></div>
           <div class="info">
             <h3>日本の年齢別人口</h3>
             <div class="date">2017.04</div>
           </div>
         </section>
         <section>
-          <a href="./works/tourists/description.html">
-            <div data-src="./assets/img/eyecatch_tourists.png" style="background-image:url(./assets/img/eyecatch_tourists.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_tourists.png)" class="image"></div>
           <div class="info">
             <h3>日本への観光客</h3>
             <div class="date">2017.02</div>
           </div>
         </section>
         <section>
-          <a href="./works/earthquakes/description.html">
-            <div data-src="./assets/img/eyecatch_earthquakes.png" style="background-image:url(./assets/img/eyecatch_earthquakes.png)" class="image"></div>
-          </a>
+          <div style="background-image:url(./assets/img/eyecatch_earthquakes.png)" class="image"></div>
           <div class="info">
             <h3>世界の地震アニメーション</h3>
             <div class="date">2017.02</div>
