--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
       <h5>制作した報道コンテンツや大学院の授業課題など</h5>
       <div id="works-block">
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_covid19.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_covid19.png)"></div>
+          </div>
           <div class="info">
             <h3>新型コロナウイルス 国内感染の状況</h3>
             <p><a href="https://toyokeizai.net/sp/visual/tko/covid19/" target="_blank">東洋経済オンライン</a></p>
@@ -159,7 +161,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_precipitation.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_precipitation.png)"></div>
+          </div>
           <div class="info">
             <h3>グラフィックで振り返る2019年の豪雨・台風災害</h3>
             <p><a href="https://toyokeizai.net/sp/visual/tko/precipitation/" target="_blank">東洋経済オンライン</a></p>
@@ -167,7 +171,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_overpitching.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_overpitching.png)"></div>
+          </div>
           <div class="info">
             <h3>甲子園投手たちはどれだけ「過剰」な投球をしているか</h3>
             <p><a href="https://toyokeizai.net/sp/visual/tko/overpitching/" target="_blank">東洋経済オンライン</a></p>
@@ -175,7 +181,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_electoralfund.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_electoralfund.png)"></div>
+          </div>
           <div class="info">
             <h3>選挙運動費用「余剰金」詳細データ</h3>
             <p><a href="https://toyokeizai.net/sp/visual/tko/electoralfund/" target="_blank">東洋経済オンライン</a></p>
@@ -183,7 +191,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_passport.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_passport.png)"></div>
+          </div>
           <div class="info">
             <h3>ビジュアルで見るパスポートのチカラ</h3>
             <p><a href="https://toyokeizai.net/sp/brandstudio-lab/passport/" target="_blank">東洋経済 Brand Studio</a></p>
@@ -191,7 +201,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_landprices2.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_landprices2.png)"></div>
+          </div>
           <div class="info">
             <h3>全国「公示地価」最新価格・過去比較3Dマップ</h3>
             <p><a href="https://toyokeizai.net/sp/visual/tko/landprices3/" target="_blank">東洋経済オンライン</a></p>
@@ -199,7 +211,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_librarians.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_librarians.png)"></div>
+          </div>
           <div class="info">
             <h3>都道府県別「図書館司書」の非正規雇用</h3>
             <p><a href="https://toyokeizai.net/sp/visual/tko/librarians/" target="_blank">東洋経済オンライン</a></p>
@@ -207,7 +221,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_landprices.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_landprices.png)"></div>
+          </div>
           <div class="info">
             <h3>全国「基準地価」市区町村平均値マップ</h3>
             <p><a href="https://toyokeizai.net/sp/visual/tko/landprices2/" target="_blank">東洋経済オンライン</a></p>
@@ -215,7 +231,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_temperature.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_temperature.png)"></div>
+          </div>
           <div class="info">
             <h3>東京の夏は徐々に暑く・長くなっている</h3>
             <p><a href="https://toyokeizai.net/sp/visual/tko/temperature/" target="_blank">東洋経済オンライン</a></p>
@@ -223,7 +241,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_viz4socialgood.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_viz4socialgood.png)"></div>
+          </div>
           <div class="info">
             <h3>人身売買データの可視化</h3>
             <p><a href="./works/viz4socialgood/" target="_blank">作品ページ</a></p>
@@ -231,7 +251,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_teachers.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_teachers.png)"></div>
+          </div>
           <div class="info">
             <h3>都道府県別「非正規教員」比率</h3>
             <p><a href="./works/teachers/" target="_blank">作品ページ</a></p>
@@ -239,7 +261,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_jpycoins.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_jpycoins.png)"></div>
+          </div>
           <div class="info">
             <h3>日本の「硬貨」をビジュアライズ</h3>
             <p><a href="./works/jpycoins/" target="_blank">作品ページ</a></p>
@@ -247,7 +271,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_dissolution.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_dissolution.png)"></div>
+          </div>
           <div class="info">
             <h3>G7各国における議会（下院）の総選挙と解散</h3>
             <p><a href="./works/dissolution/" target="_blank">作品ページ</a></p>
@@ -255,7 +281,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_trade.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_trade.png)"></div>
+          </div>
           <div class="info">
             <h3>日本の貿易品目・貿易相手</h3>
             <p>&nbsp;</p>
@@ -263,7 +291,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_pyramids.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_pyramids.png)"></div>
+          </div>
           <div class="info">
             <h3>世界各国の人口ピラミッド</h3>
             <p>&nbsp;</p>
@@ -271,7 +301,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_nobelprize.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_nobelprize.png)"></div>
+          </div>
           <div class="info">
             <h3>ノーベル賞の「高齢化」インタラクティブグラフ</h3>
             <p>&nbsp;</p>
@@ -279,7 +311,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_musicxml.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_musicxml.png)"></div>
+          </div>
           <div class="info">
             <h3>楽譜のビジュアライゼーション</h3>
             <p>&nbsp;</p>
@@ -287,7 +321,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_collisions.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_collisions.png)"></div>
+          </div>
           <div class="info">
             <h3>エディンバラ市の交通事故マップ</h3>
             <p>&nbsp;</p>
@@ -295,7 +331,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_population.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_population.png)"></div>
+          </div>
           <div class="info">
             <h3>日本の年齢別人口</h3>
             <p>&nbsp;</p>
@@ -303,7 +341,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_tourists.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_tourists.png)"></div>
+          </div>
           <div class="info">
             <h3>日本への観光客</h3>
             <p>&nbsp;</p>
@@ -311,7 +351,9 @@
           </div>
         </section>
         <section>
-          <div style="background-image:url(./assets/img/eyecatch_earthquakes.png)" class="image"></div>
+          <div class="image-wrapper">
+            <div class="image" style="background-image:url(./assets/img/eyecatch_earthquakes.png)"></div>
+          </div>
           <div class="info">
             <h3>世界の地震アニメーション</h3>
             <p><a href="./works/earthquakes/" target="_blank">作品ページ</a></p>
