--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <meta name=”description” content="Data Visualization Designer / Engineer">
+    <meta name=”description” content="荻原和樹の個人ページです。受賞歴、取材記事、講義実績、作品などを載せています。">
     <meta property="og:url" content="https://kaz-ogiwara.github.io/" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="荻原 和樹 / Kazuki OGIWARA" />
-    <meta property="og:description" content="荻原和樹の個人ページです。" />
+    <meta property="og:description" content="荻原和樹の個人ページです。受賞歴、取材記事、講義実績、作品などを載せています。" />
     <meta property="og:image" content="https://kaz-ogiwara.github.io/assets/img/eyecatch_home.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <title>荻原 和樹 / Kazuki OGIWARA</title>
