--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
           <h3>インタビュー記事</h3>
           <table>
             <tr>
+              <td>2020.12</td>
+              <td>月刊『文藝春秋』1月号　連載「令和の開拓者たち」 <a target="_blank" href="https://bunshun.jp/articles/-/42052">荻原和樹（データ・ジャーナリスト／東洋経済オンライン編集部）データ分析で真実を可視化する新たな調査報道のホープ</a></td>
+            </tr>
+            <tr>
               <td>2020.09</td>
               <td>マスナビ <a target="_blank" href="https://www.massnavi.com/people/1063.html">データへの好奇心が、新たなキャリアを切り拓いた／東洋経済新報社 「東洋経済オンライン」編集部 データジャーナリスト　荻原和樹さん</a></td>
             </tr>
@@ -70,6 +74,10 @@
         <section>
           <h3>対談、ラジオ出演</h3>
           <table>
+            <tr>
+              <td>2020.12</td>
+              <td>東京FM「TOKYO SLOW NEWS」 <a target="_blank" href="https://audee.jp/news/show/73961">1つの数字に惑わされるな！</a></td>
+            </tr>
             <tr>
               <td>2020.09</td>
               <td>東京FM「TOKYO SLOW NEWS」 <a target="_blank" href="https://audee.jp/news/show/70710">「コロナデータのホントの意味を見抜く」には？</a></td>
