--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <table>
             <tr>
               <td>2020.12</td>
-              <td>月刊『文藝春秋』1月号　連載「令和の開拓者たち」 <a target="_blank" href="https://bunshun.jp/articles/-/42052">荻原和樹（データ・ジャーナリスト／東洋経済オンライン編集部）データ分析で真実を可視化する新たな調査報道のホープ</a></td>
+              <td>月刊『文藝春秋』2021年1月号　連載「令和の開拓者たち」 <a target="_blank" href="https://bunshun.jp/articles/-/42052">荻原和樹（データ・ジャーナリスト／東洋経済オンライン編集部）データ分析で真実を可視化する新たな調査報道のホープ</a></td>
             </tr>
             <tr>
               <td>2020.09</td>
