--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta name="twitter:card" content="summary_large_image" />
     <title>荻原 和樹 / Kazuki OGIWARA</title>
     <link rel="stylesheet" href="assets/css/style.min.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89303107-2"></script>
+    <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','UA-89303107-2');</script>
   </head>
   <body>
     <div id="container">
