--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     <meta name="twitter:card" content="summary_large_image" />
     <title>荻原 和樹 / Kazuki OGIWARA</title>
     <link rel="stylesheet" href="assets/css/style.min.css">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89303107-2"></script>
-    <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','UA-89303107-2');</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-20Z2NEGBLS"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-20Z2NEGBLS');
+    </script>
   </head>
   <body>
     <div id="container">
