--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html class="no-js" lang="ja">
   <head>
@@ -85,26 +86,11 @@
           </article>
         </section>
         <section>
-          <h3>対談、ラジオ出演</h3>
-          <article>
-            <div>2020.12</div>
-            <div>東京FM「TOKYO SLOW NEWS」 <a target="_blank" href="https://audee.jp/news/show/73961">1つの数字に惑わされるな！</a></div>
-          </article>
-          <article>
-            <div>2020.09</div>
-            <div>東京FM「TOKYO SLOW NEWS」 <a target="_blank" href="https://audee.jp/news/show/70710">「コロナデータのホントの意味を見抜く」には？</a></div>
-          </article>
-          <article>
-            <div>2020.06</div>
-            <div>東洋経済 BrandLabLive <a target="_blank" href="https://toyokeizai.smartseminar.jp/public/seminar/view/1613">データビジュアライズに見る「人を動かすデザイン設計」</a></div>
-          </article>
-          <article>
-            <div>2020.06</div>
-            <div>宣伝会議SIMC <a target="_blank" href="https://www.event-forum.jp/sendenkaigi/net-mc/2020/speakers.asp?lec=toyokeizai-ogiwara">データ × クリエイティブ － 人に伝える、人を動かすデータ活用</a></div>
-          </article>
-        </section>
-        <section>
           <h3>講義、セミナー、イベント登壇</h3>
+          <article>
+            <div>2021.05</div>
+            <div>Yahoo! Bonfire Data Analyst <a target="_blank" href="https://techplay.jp/event/817431">新型コロナのダッシュボードから考えるユーザー体験の設計</a></div>
+          </article>
           <article>
             <div>2021.02</div>
             <div>Google News Lab デジタル取材道場 データ可視化を報道にどう活かすか</div>
@@ -132,6 +118,25 @@
           <article>
             <div>2019.09</div>
             <div>SlowNews オープンジャーナリズム実践講座 <a target="_blank" href="https://www.event-forum.jp/sendenkaigi/net-mc/2020/speakers.asp?lec=toyokeizai-ogiwara">国会議員の「選挙余剰金」全調査データはこうして作られた</a></div>
+          </article>
+        </section>
+        <section>
+          <h3>対談、ラジオ出演</h3>
+          <article>
+            <div>2020.12</div>
+            <div>東京FM「TOKYO SLOW NEWS」 <a target="_blank" href="https://audee.jp/news/show/73961">1つの数字に惑わされるな！</a></div>
+          </article>
+          <article>
+            <div>2020.09</div>
+            <div>東京FM「TOKYO SLOW NEWS」 <a target="_blank" href="https://audee.jp/news/show/70710">「コロナデータのホントの意味を見抜く」には？</a></div>
+          </article>
+          <article>
+            <div>2020.06</div>
+            <div>東洋経済 BrandLabLive <a target="_blank" href="https://toyokeizai.smartseminar.jp/public/seminar/view/1613">データビジュアライズに見る「人を動かすデザイン設計」</a></div>
+          </article>
+          <article>
+            <div>2020.06</div>
+            <div>宣伝会議SIMC <a target="_blank" href="https://www.event-forum.jp/sendenkaigi/net-mc/2020/speakers.asp?lec=toyokeizai-ogiwara">データ × クリエイティブ － 人に伝える、人を動かすデータ活用</a></div>
           </article>
         </section>
         <section>
