Update profile and publications

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section>
           <h3>概要</h3>
           <p>現職：スマートニュース株式会社 スマートニュース メディア研究所 / スローニュース株式会社</p>
-          <p>2010年筑波大学卒、同年東洋経済新報社入社。2017年英国エディンバラ大学大学院（修士）修了。2020年「新型コロナウイルス 国内感染の状況」でグッドデザイン賞、SmartNews Awards 2020 ベストパートナー賞（データジャーナリズム部門）。共著に『プロ直伝 伝わるデータ・ビジュアル術』（技術評論社）。</p>
+          <p>2010年筑波大学卒、同年東洋経済新報社入社。2017年英国エディンバラ大学大学院（修士）修了。2020年「新型コロナウイルス 国内感染の状況」でグッドデザイン賞、Internet Media Awards選考委員特別賞など。共著に『プロ直伝 伝わるデータ・ビジュアル術』（技術評論社、2019年）。2021年2月より現職。</p>
           <p>
             <a href="https://twitter.com/kaz_ogiwara" target="_blank">Twitter</a>
             <span class="separator">｜</span>
@@ -87,6 +87,10 @@
         </section>
         <section>
           <h3>講義、セミナー、イベント登壇</h3>
+          <article>
+            <div>2021.07</div>
+            <div>東京都市大学 メディア情報学部 社会メディア学科 特別講義「メディアの最前線」データを可視化する技術とデザイン</div>
+          </article>
           <article>
             <div>2021.05</div>
             <div>Yahoo! Bonfire Data Analyst <a target="_blank" href="https://techplay.jp/event/817431">新型コロナのダッシュボードから考えるユーザー体験の設計</a></div>
