--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html class="no-js" lang="ja">
   <head>
@@ -63,33 +62,18 @@
           </article>
         </section>
         <section>
-          <h3>インタビュー記事</h3>
-          <article>
-            <div>2021.01</div>
-            <div>日経ビジネス データから“真実”を読み解くスキル <a target="_blank" href="https://business.nikkei.com/atcl/seminar/19/00067/012200046/">混乱する“コロナ統計”報道から考えるデータジャーナリズムの役割</a></div>
-          </article>
-          <article>
-            <div>2020.12</div>
-            <div>月刊『文藝春秋』2021年1月号　連載「令和の開拓者たち」 <a target="_blank" href="https://bunshun.jp/articles/-/42052">荻原和樹（データ・ジャーナリスト／東洋経済オンライン編集部）データ分析で真実を可視化する新たな調査報道のホープ</a></div>
-          </article>
-          <article>
-            <div>2020.09</div>
-            <div>マスナビ <a target="_blank" href="https://www.massnavi.com/people/1063.html">データへの好奇心が、新たなキャリアを切り拓いた／東洋経済新報社 「東洋経済オンライン」編集部 データジャーナリスト　荻原和樹さん</a></div>
-          </article>
-          <article>
-            <div>2020.07</div>
-            <div>月刊『ブレーン』 <a target="_blank" href="https://mag.sendenkaigi.com/brain/202008/design-for-new-normal/019262.php">人に伝え人を動かすデータビジュアライゼーションの現在地</a></div>
-          </article>
-          <article>
-            <div>2020.03</div>
-            <div>エンジニアtype <a target="_blank" href="https://type.jp/et/feature/12712">東洋経済「新型コロナウイルス 国内感染の状況」サイトが大反響を生んだ理由は？ 制作者のデータ可視化デザイナーに聞く</a></div>
-          </article>
-        </section>
-        <section>
           <h3>講義、セミナー、イベント登壇</h3>
           <article>
-            <div>2021.07</div>
-            <div>東京都市大学 メディア情報学部 社会メディア学科 特別講義「メディアの最前線」データを可視化する技術とデザイン</div>
+            <div>2021.10</div>
+            <div>西東京市図書館 <a target="_blank" href="https://www.library.city.nishitokyo.lg.jp/info?0&pid=1641">オンライン講演会『データを正しく読むための「データリテラシー」入門』</a></div>
+          </article>
+          <article>
+            <div>2021.10</div>
+            <div>Google News Initiative デジタル取材道場 地形データの活用実践</div>
+          </article>
+          <article>
+            <div>2021.08</div>
+            <div>Schoo <a target="_blank" href="https://schoo.jp/class/8216">最新業務の学び方シリーズ 数字で人を動かす「データ可視化の学び方」</a></div>
           </article>
           <article>
             <div>2021.05</div>
@@ -97,7 +81,7 @@
           </article>
           <article>
             <div>2021.02</div>
-            <div>Google News Lab デジタル取材道場 データ可視化を報道にどう活かすか</div>
+            <div>Google News Initiative デジタル取材道場 データ可視化を報道にどう活かすか</div>
           </article>
           <article>
             <div>2021.02</div>
@@ -125,6 +109,29 @@
           </article>
         </section>
         <section>
+          <h3>インタビュー記事</h3>
+          <article>
+            <div>2021.01</div>
+            <div>日経ビジネス データから“真実”を読み解くスキル <a target="_blank" href="https://business.nikkei.com/atcl/seminar/19/00067/012200046/">混乱する“コロナ統計”報道から考えるデータジャーナリズムの役割</a></div>
+          </article>
+          <article>
+            <div>2020.12</div>
+            <div>月刊『文藝春秋』2021年1月号　連載「令和の開拓者たち」 <a target="_blank" href="https://bunshun.jp/articles/-/42052">荻原和樹（データ・ジャーナリスト／東洋経済オンライン編集部）データ分析で真実を可視化する新たな調査報道のホープ</a></div>
+          </article>
+          <article>
+            <div>2020.09</div>
+            <div>マスナビ <a target="_blank" href="https://www.massnavi.com/people/1063.html">データへの好奇心が、新たなキャリアを切り拓いた／東洋経済新報社 「東洋経済オンライン」編集部 データジャーナリスト　荻原和樹さん</a></div>
+          </article>
+          <article>
+            <div>2020.07</div>
+            <div>月刊『ブレーン』 <a target="_blank" href="https://mag.sendenkaigi.com/brain/202008/design-for-new-normal/019262.php">人に伝え人を動かすデータビジュアライゼーションの現在地</a></div>
+          </article>
+          <article>
+            <div>2020.03</div>
+            <div>エンジニアtype <a target="_blank" href="https://type.jp/et/feature/12712">東洋経済「新型コロナウイルス 国内感染の状況」サイトが大反響を生んだ理由は？ 制作者のデータ可視化デザイナーに聞く</a></div>
+          </article>
+        </section>
+        <section>
           <h3>対談、ラジオ出演</h3>
           <article>
             <div>2020.12</div>
@@ -146,6 +153,10 @@
         <section>
           <h3>執筆記事</h3>
           <p class="note">（東洋経済オンラインでの執筆記事は<a href="https://toyokeizai.net/list/author/%E8%8D%BB%E5%8E%9F+%E5%92%8C%E6%A8%B9" target="_blank">東洋経済オンラインの著者ページ</a>を参照）</p>
+          <article>
+            <div>2021.09</div>
+            <div>スマートニュース メディア研究所 <a target="_blank" href="https://smartnews-smri.com/research/research-723/">東京オリンピックは海外メディアのデータ可視化でどう表現されたか</a></div>
+          </article>
           <article>
             <div>2020.08</div>
             <div>週刊東洋経済 2020年8月8日号 <a target="_blank" href="https://premium.toyokeizai.net/articles/-/24295">3つのチェックポイントで読み解く 怪しいグラフの見抜き方</a></div>
